# strategy_tester

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-tests.yml
src/: broker.py  pipeline.py
src/backtesting/: optimization.py  pipeline_factory.py  report_html.py
src/backtesting/pipeline/: factory.py  steps.py
src/examples/data/crypto/: yf_BTC-USD_20190101_2024823_1d.csv  yf_BTC-USD_20190101_2024826_1wk.csv
src/examples/multi_asset/bollinger_bands_swing/: assets.py  (+3 more)
src/metrics/: __init__.py  entries_counts.py  profits_losses_bars.py  profits_losses_by_bar_opened.py  profits_losses_mean.py  profits_losses_sum.py  utils.py
src/pipeline/: context.py  pipe.py
src/strategy_tester/: __init__.py  broker_params.py  optimization_params.py
src/strategy_tester/backtesting/: __init__.py  backtest.py  broker_params.py  optimization.py  optimization_params.py  report_html.py  saving.py
src/strategy_tester/metrics/: __init__.py  entries_counts.py  profits_losses_bars.py  profits_losses_by_bar_opened.py  profits_losses_mean.py  profits_losses_sum.py  report_pdf.py  save.py  utils.py
src/strategy_tester/pipeline/: __init__.py  context.py  pipe.py
src/strategy_tester/plot/: plot_metrics.py
src/strategy_tester/report/: __init__.py
src/strategy_tester/storage/: _init__.py  save_dataframe.py
src/strategy_tester/telegram/: __init__.py  bot.py  errors.py  simple.py
src/strategy_tester/tests/: pipeline_test.py
src/strategy_tester/utils/: __init__.py  files.py  flatten_list.py  get_strategy_params.py  log.py  parsers.py
src/telegram/: bot.py
src/tests/: broker_params_test.py  optimization_params_test.py  pipeline_initialization_test.py  pipeline_test.py
src/tests/metrics/: entries_counts_test.py  profits_losses_bars_test.py  profits_losses_by_bar_opened_test.py  profits_losses_mean_test.py  profits_losses_sum_test.py  utils_test.py
src/v2/: prova.py  prova_optional_args.py
(+62 files in other folders)
